added other elements on html

--- a/index.html
+++ b/index.html
@@ -25,9 +25,18 @@
     </div>
   </div>
 </nav>
+<div class="hero">
     <h1>
         Trinity Ndlovu
     </h1>
+    <p>
+      I am a Junior Frontend Developer passionate about creating Responsive and accessible websites.
+      I focus on writing clean, efficient code and bringing designs to life with attention to detail
+      while continously learning and improving my skills through real-world Projects.
+    </p>
+    <a href="#" class="btn btn-primary">Projects</a>
+    <a href="#"class="btn btn-primary">Contact me</a>
+  </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 </body>
 </html>
