--- a/index.html
+++ b/index.html
@@ -43,6 +43,40 @@
     <a href="#" class="btn btn-info">Contact me</a>
   </div>
   </div>
+  <h2>Tech stacks</h2>
+  <ul>
+    <li>HTML5</li>
+    <li>CSS3</li>
+    <li>JavaScript</li>
+    <li>Bootstrap</li>
+    <li>VS Code</li>
+    <li>Git & GitHub</li>
+  </ul>
+  <h3>Projects</h3>
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-sm-6">
+        <div class="card" style="width: 18rem;">
+  <img images="AI app.jpeg" class="card-img-top" alt="AI recipe generator app">
+  <div class="card-body">
+    <h5 class="card-title">AI Recipe App Generator</h5>
+    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
+    <a href="#" class="btn btn-primary">Go somewhere</a>
+  </div>
+</div>
+      </div>
+      <div class="col-sm-6">
+        <div class="card" style="width: 18rem;">
+  <img src="..." class="card-img-top" alt="...">
+  <div class="card-body">
+    <h5 class="card-title">Card title</h5>
+    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
+    <a href="#" class="btn btn-primary">Go somewhere</a>
+  </div>
+</div>
+      </div>
+    </div>
+  </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 </body>
 </html>
