--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://kit.fontawesome.com/8a1fdcdfa1.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/8a1fdcdfa1.js" crossorigin="anonymous"></script>">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Instrument+Serif:ital@0;1&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&family=Winky+Rough:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
@@ -56,27 +56,88 @@
   <div class="container-fluid">
     <div class="row">
       <div class="col-sm-6">
-        <div class="card" style="width: 18rem;">
-  <img images="AI app.jpeg" class="card-img-top" alt="AI recipe generator app">
+        <div class="card"> 
+  <img src="images/AI app.jpeg" class="card-img-top" alt="AI recipe generator app">
   <div class="card-body">
     <h5 class="card-title">AI Recipe App Generator</h5>
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
+    <p class="card-text">An AI-powered web application generates recipe based on user input.<br>
+      This Project helped me understand how to work with APIs,handle user input, and manage asynchronous requests using Axios.<br>
+      <br>
+      <h2>
+        <small>Skils used:</small>
+        </h2>
+        HTML, CSS,JavaScript, API intergration, Axios 
+    </p>
+    <p class="text-muted small fst-italic">
+Planned Improvements: Refactor UI using Bootstrap for better responsiveness and aesthetics.
+    </p>
     <a href="#" class="btn btn-primary">Go somewhere</a>
   </div>
 </div>
       </div>
       <div class="col-sm-6">
-        <div class="card" style="width: 18rem;">
-  <img src="..." class="card-img-top" alt="...">
+        <div class="card">
+  <img src="images/weather .jpeg" class="card-img-top" alt="weather app">
   <div class="card-body">
-    <h5 class="card-title">Card title</h5>
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
+    <h5 class="card-title">Weather App</h5>
+    <p class="card-text"> A weather application that fetches and displays real time weather data for different cities<br>
+    Through this project, I practiced consuming APIs,handing API responses, and updating the UI dynamicall with JavaScript.<br>
+    <br>
+    <h2>
+      <small>Skils used:</small>
+      </h2>
+      HTML,CSS,JavaScript, API intergration,Axios
+    </p>
     <a href="#" class="btn btn-primary">Go somewhere</a>
   </div>
 </div>
       </div>
     </div>
+    <div class="row">
+      <div class="col-sm-6">
+    <div class="card">
+  <img src="images/world clock.jpeg" class="card-img-top" alt="world clock app">
+  <div class="card-body">
+    <h5 class="card-title">World Clock App</h5>
+    <p class="card-text">A world clock application that displays the current for multiple time zones.<br>
+    This project strenghthened my understanding of Javascript data and time functions and working with external APIs.<br>
+    <br>
+    <h4>
+      <small>Skils used:</small>
+    </h4>
+      HTML,CSS,JavaScript, Timezone API intergration,Axios
+    </p>
+    <a href="#" class="btn btn-primary">Go somewhere</a>
   </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+  </div>
+  </div>
+    <div class="col-sm-6">
+      <div class="card">
+  <img src="images/portfolio website.jpeg" class="card-img-top" alt="portfolio website">
+  <div class="card-body">
+    <h5 class="card-title">Portfolio Website</h5>
+    <p class="card-text">A responsive portfolio website showcasing my projects and skills.</p>
+    <a href="#" class="btn btn-primary">Go somewhere</a>
+  </div>
+      </div>
+      </div>
+  </div>
+  <h2>Contact Me</h2>
+  <form>
+    <div class="mb-3">
+      <label for="name" class="form-label">Name</label>
+      <input type="text" class="form-control" id="name" placeholder="Your Name">
+    </div>
+    <div class="mb-3">
+      <label for="email" class="form-label">Email address</label>
+      <input type="email" class="form-control" id="email" placeholder="Your Email">
+    </div>
+    <div class="mb-3">
+      <label for="message" class="form-label">Message</label>
+      <textarea class="form-control" id="message" rows="4" placeholder="Your Message"></textarea>
+    </div>
+    <button type="submit" class="btn btn-primary">Submit</button>
+  </form>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 </body>
 </html>
