--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <div class="row">
       <div class="col-sm-6">
         <div class="card"> 
-  <img src="images/AI app.jpeg" class="card-img-top" alt="AI recipe generator app">
+  <img src="images/AI app.png" class="card-img-top" alt="AI recipe generator app">
   <div class="card-body">
     <h5 class="card-title">AI Recipe App Generator</h5>
     <p class="card-text">An AI-powered web application generates recipe based on user input.<br>
@@ -77,7 +77,7 @@ Planned Improvements: Refactor UI using Bootstrap for better responsiveness and 
       </div>
       <div class="col-sm-6">
         <div class="card">
-  <img src="images/weather .jpeg" class="card-img-top" alt="weather app">
+  <img src="images/weather.png" class="card-img-top" alt="weather app">
   <div class="card-body">
     <h5 class="card-title">Weather App</h5>
     <p class="card-text"> A weather application that fetches and displays real time weather data for different cities<br>
@@ -96,7 +96,7 @@ Planned Improvements: Refactor UI using Bootstrap for better responsiveness and 
     <div class="row">
       <div class="col-sm-6">
     <div class="card">
-  <img src="images/world clock.jpeg" class="card-img-top" alt="world clock app">
+  <img src="images/worldclock.png" class="card-img-top" alt="world clock app">
   <div class="card-body">
     <h5 class="card-title">World Clock App</h5>
     <p class="card-text">A world clock application that displays the current for multiple time zones.<br>
