added the last picture

--- a/index.html
+++ b/index.html
@@ -120,12 +120,12 @@ Planned Improvements: Refactor UI using Bootstrap for better responsiveness and 
   </div>
     <div class="col-sm-6">
       <div class="card">
-  <img src="images/portfolio website.jpeg" class="card-img-top" alt="portfolio website">
+  <img src="images/Portfolio.png" class="card-img-top" alt="portfolio website">
   <div class="card-body">
     <h5 class="card-title">Portfolio Website</h5>
     <p class="card-text">A responsive portfolio website showcasing my projects and skills.</p>
     <a href="https://github.com/ndlovutrinity18-a11y/My-Portfolio" class="btn btn-primary"><i class="fa-brands fa-square-github"></i></a>
-    <a href="#" class="btn btn-primary"><i class="fa-solid fa-link"></i></a>
+    <a href="https://stalwart-frangollo-13a334.netlify.app/" class="btn btn-primary"><i class="fa-solid fa-link"></i></a>
   </div>
       </div>
       </div>
