Updated details under project section

--- a/index.html
+++ b/index.html
@@ -123,7 +123,14 @@ Planned Improvements: Refactor UI using Bootstrap for better responsiveness and 
   <img src="images/Portfolio.png" class="card-img-top" alt="portfolio website">
   <div class="card-body">
     <h5 class="card-title">Portfolio Website</h5>
-    <p class="card-text">A responsive portfolio website showcasing my projects and skills.</p>
+    <p class="card-text">A responsive portfolio website showcasing my projects and skills.
+    This project enhanced my skills in responsive web design using Bootstrap and improved my ability to create visually appealing layouts.<br>
+    <br>
+    <h4>
+      <small>Skills used:</small>
+    </h4>
+      HTML, CSS, Bootstrap, Responsive Design
+    </p>
     <a href="https://github.com/ndlovutrinity18-a11y/My-Portfolio" class="btn btn-primary"><i class="fa-brands fa-square-github"></i></a>
     <a href="https://stalwart-frangollo-13a334.netlify.app/" class="btn btn-primary"><i class="fa-solid fa-link"></i></a>
   </div>
