--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
       <div class="navbar-nav">
         <a class="nav-link active" aria-current="page" href="#">Home</a>
-        <a class="nav-link" href="#">About</a>
+        <a class="nav-link" href="about.html">About</a>
         <a class="nav-link" href="#">Projects</a>
         <a class="nav-link" href="#"> <i class="fa-solid fa-phone"> </i>Contact</a>
         
