linked project page to the home page

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
     </button>
     <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <a class="nav-link active" aria-current="page" href="#">Home</a>
+        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
         <a class="nav-link" href="about.html">About</a>
-        <a class="nav-link" href="#">Projects</a>
+        <a class="nav-link" href="projects.html">Projects</a>
         <a class="nav-link" href="#"> <i class="fa-solid fa-phone"> </i>Contact</a>
         
       </div>
@@ -66,15 +66,12 @@
     <h5 class="card-title">AI Recipe App Generator</h5>
     <p class="card-text">An AI-powered web application generates recipe based on user input.<br>
       This Project helped me understand how to work with APIs, handle user input, and manage asynchronous requests using Axios.<br>
-      <br>
-      <h2>
-        <small>Skills used:</small>
-        </h2>
-        HTML, CSS, JavaScript, API integration, Axios 
+    <h2>
+      <small>Skills used:</small>
+      </h2>
+      HTML, CSS, JavaScript, API integration, Axios
     </p>
-    <p class="text-muted small fst-italic">
-Planned Improvements: Refactor UI using Bootstrap for better responsiveness and aesthetics.
-    </p>
+
     <a href="https://github.com/ndlovutrinity18-a11y/AI-Recipe-Generator" class="btn btn-primary"> <i class="fa-brands fa-square-github"> </i></a>
     <a href="https://airecipeappbytee.netlify.app/" class="btn btn-primary"><i class="fa-solid fa-link"></i></a>
   </div>
@@ -88,9 +85,9 @@ Planned Improvements: Refactor UI using Bootstrap for better responsiveness and 
     <p class="card-text"> A weather application that fetches and displays real time weather data for different cities<br>
     Through this project, I practiced consuming APIs, handling API responses, and updating the UI dynamically with JavaScript.<br>
     <br>
-    <h2>
+    <h4>
       <small>Skills used:</small>
-      </h2>
+      </h4>
       HTML, CSS, JavaScript, API integration, Axios
     </p>
     <a href="https://github.com/ndlovutrinity18-a11y/Weather-App" class="btn btn-primary"><i class="fa-brands fa-square-github"></i></a>
@@ -108,7 +105,7 @@ Planned Improvements: Refactor UI using Bootstrap for better responsiveness and 
     <p class="card-text">A world clock application that displays the current time for multiple time zones.<br>
     This project strengthened my understanding of Javascript date and time functions and working with external APIs.<br>
     <br>
-    <h4>
+<h4>
       <small>Skills used:</small>
     </h4>
       HTML, CSS, JavaScript, Timezone API integration, Axios
