--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
         <a class="nav-link active" aria-current="page" href="index.html">Home</a>
         <a class="nav-link" href="about.html">About</a>
         <a class="nav-link" href="projects.html">Projects</a>
-        <a class="nav-link" href="#"> <i class="fa-solid fa-phone"> </i>Contact</a>
+        <a class="nav-link" href="contact.html"> <i class="fa-solid fa-phone"> </i>Contact</a>
         
       </div>
     </div>
