--- a/contact.html
+++ b/contact.html
@@ -21,5 +21,11 @@
    </h3>
         </div>
 </div>
+<p>
+    Back to <a href="index.html">Home</a>
+</p>
+<script src="https://kit.fontawesome.com/8a1fdcdfa1.js" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+
 </body>
 </html>
