--- a/projects.html
+++ b/projects.html
@@ -28,7 +28,7 @@
         <li class="nav-item">
           <a class="nav-link" href="projects.html">Projects</a>
           <li class="nav-item">
-          <a class="nav-link" href="#"> <i class="fa-solid fa-phone"> </i>Contact</a>
+          <a class="nav-link" href="contact.html"> <i class="fa-solid fa-phone"> </i>Contact</a>
         </li>
       </ul>
     </div>
