--- a/index.html
+++ b/index.html
@@ -159,9 +159,15 @@
     </div>
     <button type="submit" class="btn btn-primary">Submit</button>
   </form>
-  <h3>Alternatively send an email to:</h3><br>
-   <a href="mailto:ndlovutrinity18@gmail.com">ndlovutrinity18@gmail.com</a>
   </div>
+  <h3 class="ps-5 mb-0">Alternatively send an email to:</h3><br>
+   <a href="mailto:ndlovutrinity18@gmail.com" class="ps-5 mb-5 mt-0 ">ndlovutrinity18@gmail.com</a>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+<footer class="bg-body-tertiary text-center p-3 mt-5">
+    <p>&copy; Trinity Ndlovu.Aspiring Software Developer|Exploring Data and Cybersecurity</p>
+    <p>
+      <a href="https://www.linkedin.com/in/trinity-ndlovu-750bb1308/" target="_blank" rel="noopener noreferrer" aria-label="open Trinity Ndlovu's LinkedIn profile"><i class="fa-brands fa-linkedin fa-2x mx-2"></i></a>
+      <a href="https://github.com/ndlovutrinity18-a11y" target="_blank" rel="noopener noreferrer" aria-label="open Trinity Ndlovu's GitHub profile"><i class="fa-brands fa-github fa-2x mx-2"></i></a>
+  </footer>
 </body>
 </html>
