--- a/about.html
+++ b/about.html
@@ -18,10 +18,10 @@
     </button>
     <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-        <a class="nav-link" href="about.html">About</a>
-        <a class="nav-link" href="projects.html">Projects</a>
-        <a class="nav-link" href="contact.html"> <i class="fa-solid fa-phone"> </i>Contact</a>
+        <a class="nav-link" aria-current="page" href="index.html" title="homepage">Home</a>
+        <a class="nav-link active" href="about.html" title="About me">About</a>
+        <a class="nav-link" href="projects.html" title="view my projects">Projects</a>
+        <a class="nav-link" href="contact.html" title="Get in touch"> <i class="fa-solid fa-phone"> </i>Contact</a>
         
       </div>
     </div>
@@ -49,7 +49,7 @@
          I enjoy problem-solving, learning continuously, and turning ideas into functional, real-world solutions.
          This portfolio showcases my projects, skills, and learning journey as I work towards becoming a well-rounded tech professional.</p>
             </div>
-         <p><em> See my</em> <a href="projects.html" class="btn btn-primary">projects</a></p>
+         <p><em> See my</em> <a href="projects.html" class="btn btn-primary" title="view my projects">projects</a></p>
             </div>
          </div>
     </div>
