--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Me</title>
+    <meta name="description" content="Get in touch with Trinity Ndlovu, an aspiring Frontend Developer. Reach out via email or LinkedIn for collaborations, inquiries, or project discussions.">
+    <title>Contact Trinity Ndlovu</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -14,15 +15,15 @@
     Let's Get in Touch!
    </h1>
    <h3>
-   <i class="fa-solid fa-square-envelope"></i> Email: <a href="mailto:ndlovutrinity18@gmail.com">ndlovutrinity18@gmail.com</a>
+   <i class="fa-solid fa-square-envelope"></i> Email: <a href="mailto:ndlovutrinity18@gmail.com" title="Email Trinity">ndlovutrinity18@gmail.com</a>
    </h3>
    <h3>
-    <i class="fa-brands fa-linkedin"></i>LinkedIn: <a href="https://www.linkedin.com/in/trinity-ndlovu-750bb1308/" target="_blank" rel="noopener noreferrer" aria-label="open Trinity Ndlovu's LinkedIn profile">Trinity Ndlovu</a>
+    <i class="fa-brands fa-linkedin"></i>LinkedIn: <a href="https://www.linkedin.com/in/trinity-ndlovu-750bb1308/" target="_blank" rel="noopener noreferrer" aria-label="open Trinity Ndlovu's LinkedIn profile" title="open Trinity Ndlovu's LinkedIn profile">Trinity Ndlovu</a>
    </h3>
         </div>
 </div>
 <p>
-    Back to <a href="index.html">Home</a>
+    Back to <a href="index.html" title="homepage">Home</a>
 </p>
 <script src="https://kit.fontawesome.com/8a1fdcdfa1.js" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
