--- a/projects.html
+++ b/projects.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projects file</title>
+    <meta name="description" content="Projects built by Trinity Ndlovu, an aspiring Frontend Developer skilled in HTML, CSS, JavaScript, and Bootstrap. Explore my portfolio of web applications and responsive designs.">
+    <title>Projects that Trinity Ndlovu has built</title>
     <link rel="stylesheet" href="styles.css">
         <script src="https://kit.fontawesome.com/8a1fdcdfa1.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
@@ -20,15 +21,15 @@
     <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+          <a class="nav-link" aria-current="page" href="index.html" title="homepage">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="about.html">About</a>
+          <a class="nav-link" href="about.html" title="About me">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="projects.html">Projects</a>
+          <a class="nav-link active" href="projects.html" title="view my projects">Projects</a>
           <li class="nav-item">
-          <a class="nav-link" href="contact.html"> <i class="fa-solid fa-phone"> </i>Contact</a>
+          <a class="nav-link" href="contact.html" title="Get in touch"> <i class="fa-solid fa-phone"> </i>Contact</a>
         </li>
       </ul>
     </div>
@@ -56,8 +57,8 @@
 
     </p>
     <em>view the project on GitHub and the hosted results on the link</em> <i class="fa-regular fa-hand-point-down"></i>
-    <a href="https://github.com/ndlovutrinity18-a11y/AI-Recipe-Generator" class="btn btn-primary mt-3"> <i class="fa-brands fa-square-github"> </i></a>
-    <a href="https://airecipeappbytee.netlify.app/" class="btn btn-primary mt-3"><i class="fa-solid fa-link"></i></a>
+    <a href="https://github.com/ndlovutrinity18-a11y/AI-Recipe-Generator" class="btn btn-primary mt-3"> <i class="fa-brands fa-square-github" title="view my project on GitHub"> </i></a>
+    <a href="https://airecipeappbytee.netlify.app/" class="btn btn-primary mt-3"><i class="fa-solid fa-link" title="view hosted project"></i></a>
   </div>
 </div>
     </div>
@@ -76,8 +77,8 @@ Through this project, I practiced consuming APIs, handling API responses, and up
       HTML, CSS, JavaScript, API integration, Axios
     </p>
     <em>view the project on GitHub and the hosted results on the link</em> <i class="fa-regular fa-hand-point-down"></i>
-     <a href="https://github.com/ndlovutrinity18-a11y/Weather-App" class="btn btn-primary mt-3"><i class="fa-brands fa-square-github"></i></a>
-    <a href="https://teeweather-app.netlify.app/" class="btn btn-primary mt-3"><i class="fa-solid fa-link"></i></a>
+     <a href="https://github.com/ndlovutrinity18-a11y/Weather-App" class="btn btn-primary mt-3"><i class="fa-brands fa-square-github" title="view project on GitHub"></i></a>
+    <a href="https://teeweather-app.netlify.app/" class="btn btn-primary mt-3"><i class="fa-solid fa-link" title="view hosted project"></i></a>
   </div>
 </div>
   </div>
@@ -96,8 +97,8 @@ This project strengthened my understanding of Javascript date and time functions
       HTML, CSS, JavaScript, Timezone API integration, Axios
 </p>
 <em>view the project on GitHub and the hosted results on the link</em> <i class="fa-regular fa-hand-point-down"></i>
-<a href="https://github.com/ndlovutrinity18-a11y/World-clock" class="btn btn-primary mt-3"><i class="fa-brands fa-square-github"></i></a>
-    <a href="https://world-clock-igsj.onrender.com/index.html" class="btn btn-primary mt-3"><i class="fa-solid fa-link"></i></a>
+<a href="https://github.com/ndlovutrinity18-a11y/World-clock" class="btn btn-primary mt-3"><i class="fa-brands fa-square-github" title="view project on GitHub"></i></a>
+    <a href="https://world-clock-igsj.onrender.com/index.html" class="btn btn-primary mt-3"><i class="fa-solid fa-link" title="view hosted project"></i></a>
   </div>
 </div>
 </div>
@@ -114,8 +115,8 @@ This project strengthened my understanding of Javascript date and time functions
       HTML, CSS, JavaScript, Bootstrap
       </p>
      <em>view the project on GitHub and the hosted results on the link</em> <i class="fa-regular fa-hand-point-down"></i>
-      <a href="https://github.com/ndlovutrinity18-a11y/My-Portfolio" class="btn btn-primary mt-3"><i class="fa-brands fa-square-github"></i></a>
-    <a href="https://stalwart-frangollo-13a334.netlify.app/" class="btn btn-primary mt-3"><i class="fa-solid fa-link"></i></a>
+      <a href="https://github.com/ndlovutrinity18-a11y/My-Portfolio" class="btn btn-primary mt-3"><i class="fa-brands fa-square-github" title="view project on GitHub"></i></a>
+    <a href="https://stalwart-frangollo-13a334.netlify.app/" class="btn btn-primary mt-3"><i class="fa-solid fa-link" title="view hosted project"></i></a>
   </div>
 </div>
 </div>
